[gd_scene load_steps=6 format=2]

[ext_resource path="res://Src/UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Sketch Gothic School.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.5
margin_top = -153.5
margin_right = 254.5
margin_bottom = 153.5

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
visible = false
margin_right = 509.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_right = 509.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 103.0
margin_right = 509.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 509.0
margin_bottom = 307.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
